--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.8.1'
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'org.greenrobot:greendao:3.2.2'
+    //view
+    compile 'com.classic.common:multiple-status-view:1.3'
+    compile 'com.github.bumptech.glide:glide:4.0.0'
 }
