--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
     //view
     compile 'com.classic.common:multiple-status-view:1.3'
     compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
+    compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
 }
