--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,4 +42,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
     compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
+    compile 'com.android.support:design:26.0.0-alpha1'
 }
