--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
     <uses-permission android:name="android.permission.READ_PROFILE"/>
     <uses-permission android:name="android.permission.READ_CONTACTS"/>
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -16,8 +16,9 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".Activities.SplashActivity"
+            android:theme="@style/FullScreenTheme"
             android:screenOrientation="portrait"
-            android:theme="@style/FullScreenTheme">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -27,10 +28,9 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"/>
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login">
-        </activity>
+
+        <activity android:name=".Activities.LoginActivity"
+                  android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
