--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,9 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Activities.SplashActivity"
+            android:name=".Activities.LoginActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/FullScreenTheme">
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -27,10 +27,8 @@
         <activity
             android:name=".MainActivity"
             android:screenOrientation="portrait"/>
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login">
-        </activity>
+
+        <!--<activity android:name=".Activities.LoginActivity"/>-->
     </application>
 
 </manifest>
