--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
     compile 'com.squareup.retrofit2:converter-scalars:2.3.0'
 
     compile 'com.tbruyelle.rxpermissions2:rxpermissions:0.9.4@aar'
+    compile 'tv.danmaku.ijk.media:ijkplayer-java:0.8.2'
+    compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.2'
 }
