--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     compile 'com.facebook.stetho:stetho:1.5.0'
     compile 'org.greenrobot:greendao:3.2.2'
     //view
-    compile 'com.classic.common:multiple-status-view:1.3'
+    //compile 'com.classic.common:multiple-status-view:1.3'
     compile 'com.github.bumptech.glide:glide:4.0.0'
     compile 'com.trello.rxlifecycle2:rxlifecycle:2.1.0'
     compile 'com.trello.rxlifecycle2:rxlifecycle-components:2.1.0'
@@ -56,4 +56,5 @@ dependencies {
     compile 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.2'
     compile 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.2'
     compile 'com.danikula:videocache:2.7.0'
+    compile 'com.qmuiteam:qmui:1.0.0'
 }
